# ROS-manipulator-mobilerobot

./: README.md
agv/agv_control/: CMakeLists.txt  package.xml
agv/agv_control/config/: control.yaml
agv/agv_control/launch/: agv_control.launch  keyboard_teleop.launch
agv/agv_control/scripts/: agv_key
agv/agv_description/: CMakeLists.txt  package.xml  urdf.rviz
agv/agv_description/config/: joint_names_AGV.yaml
agv/agv_description/launch/: display.launch  mobile_manipulator_display.launch
agv/agv_description/meshes/: base_Link.STL  base_footprint.STL  bl_Link.STL  br_Link.STL  fl_Link.STL  fr_Link.STL
agv/agv_description/urdf/: agv.csv  agv.gazebo  (+8 more)
agv/agv_gazebo/: CMakeLists.txt  package.xml
manipulator/arm_planning/: CMakeLists.txt  package.xml
manipulator/manipulator_description/: package.xml
manipulator/manipulator_description_gazebo/: CMakeLists.txt  package.xml  readme.txt
manipulator/manipulator_moveit_config/: CMakeLists.txt  package.xml
manipulator/manipulator_moveit_config/config/: gazebo_joint_states.yaml  joint_limits.yaml  kinematics.yaml  manipulator_description.srdf  ompl_planning.yaml  ros_controllers.yaml  trajectory_control.yaml
manipulator/manipulator_moveit_config/launch/: demo.launch  demo_gazebo.launch  gazebo.launch  manipulator_description_moveit_controller_manager.launch.xml  manipulator_description_trajectory_controller.launch  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
(+45 files in other folders)
